Spacing fixes for new collapsed message types.

--- a/public/stylesheets/angulr-custom.css
+++ b/public/stylesheets/angulr-custom.css
@@ -25,3 +25,11 @@
     padding-bottom: 15px;
 }
 
+.m-t-midxs {
+    margin-top: 3px;
+}
+
+.padder-v-sm {
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
